Use constants for headers and charsets